--- a/style/style.css
+++ b/style/style.css
@@ -33,6 +33,30 @@ section#telefone {
     background: url(../imagens/frame-iphone.png) no-repeat;
 }
 
+section#redes-sociais img {
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px black;
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.795);
+    translate: -2px -2px;
+    box-shadow: 5px 5px 10px black;
+    transition: transform .3s, border .8s;
+}
+
+section#redes-sociais {
+    text-align: right;
+}
+
+section#redes-sociais img:active {
+    transform: scale(95%);
+}
+
 iframe#tela {
     position: relative;
     top: 82px;
